--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1422,4 +1422,17 @@ figure.cover {
   a.cover-link:hover {
     color: #23212d !important;
   }
+  /*Added below/*
+
+/* Custom utility to force videos to fill their container */
+.video-universal {
+    // Inherit properties from Bootstrap/MDB classes. Only works if MDB is present
+    @extend .embed-responsive;
+    @extend .embed-responsive-16by9;
+    @extend .rounded;
+    @extend .z-depth-1;
+    
+    // Custom override
+    object-fit: contain !important; 
+  }
 }
