--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -189,14 +189,16 @@
       {% if entry.bibtex_show %}
         <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
       {% endif %}
-      {% comment %} {% if entry.html %}
-        {% if entry.html contains '://' %}
-          <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
-        {% else %}
-          <a href="{{ entry.html | prepend: '/assets/html/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+      {% comment %}
+        {% if entry.html %}
+          {% if entry.html contains '://' %}
+            <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+          {% else %}
+            <a href="{{ entry.html | prepend: '/assets/html/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+          {% endif %}
         {% endif %}
-      {% endif %} {% endcomment %}
-      
+      {% endcomment %}
+
       {% if entry.pdf %}
         {% if entry.pdf contains '://' %}
           {% assign pdf_url = entry.pdf %}
@@ -213,20 +215,20 @@
           <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
         {% endif %}
       {% endif %}
-      
+
       {% if entry.video and site.enable_video_embedding %}
         <a class="video btn btn-sm z-depth-0" role="button">Video</a>
       {% elsif entry.video %}
         <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
       {% endif %}
-      
+
       {% if entry.blog %}
         <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
       {% endif %}
       {% if entry.code %}
         <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
       {% endif %}
-      
+
       {% if entry.poster %}
         {% if entry.poster contains '://' %}
           {% assign poster_url = entry.poster %}
@@ -235,7 +237,7 @@
         {% endif %}
         <a class="poster btn btn-sm z-depth-0" role="button">Poster</a>
       {% endif %}
-      
+
       {% if entry.slides %}
         {% if entry.slides contains '://' %}
           <a href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
@@ -356,19 +358,21 @@
     {% if entry.video and site.enable_video_embedding %}
       <div class="video hidden">
         <div class="embed-responsive embed-responsive-16by9 rounded z-depth-1">
-           {% include video.liquid path=entry.video class="embed-responsive-item video-universal" controls=true %}
+          {% include video.liquid path=entry.video class="embed-responsive-item video-universal" controls=true %}
         </div>
       </div>
     {% endif %}
 
-    {% comment %} {% if entry.video and site.enable_video_embedding %}
-      <div class="video hidden">
-        <div class="embed-responsive embed-responsive-16by9 rounded z-depth-1">
-          {% include video.liquid path=entry.video class="embed-responsive-item" controls=true %}
+    {% comment %}
+      {% if entry.video and site.enable_video_embedding %}
+        <div class="video hidden">
+          <div class="embed-responsive embed-responsive-16by9 rounded z-depth-1">
+            {% include video.liquid path=entry.video class="embed-responsive-item" controls=true %}
+          </div>
+          {% comment %} <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1 w-100" controls=true %}</div> {% endcomment %}
         </div>
-        {% comment %} <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1 w-100" controls=true %}</div> {% endcomment %}
-      </div>
-    {% endif %} {% endcomment %}
+      {% endif %}
+    {% endcomment %}
 
     {% if entry.pdf %}
       <div class="pdf hidden">
@@ -387,6 +391,5 @@
         </div>
       </div>
     {% endif %}
-    
   </div>
 </div>
