--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -384,6 +384,29 @@
       </div>
     {% endif %}
 
+    {% if entry.pdf %}
+      <div class="pdf hidden">
+        <div style="text-align: center;">
+          {% if pdf_url contains '://' %}
+            {% assign viewer_url = pdf_url %}
+          {% else %}
+            {% assign viewer_url = pdf_url | absolute_url %}
+          {% endif %}
+
+          <object data="{{ pdf_url }}" type="application/pdf" width="100%" height="900px">
+            
+            <iframe 
+              src="https://docs.google.com/gview?url={{ viewer_url }}&embedded=true" 
+              style="width:100%; height:900px;" 
+              frameborder="0"
+            >
+              <p>Unable to display PDF file. <a href="{{ pdf_url }}">Download</a> instead.</p>
+            </iframe>
+          </object>
+        </div>
+      </div>
+    {% endif %}
+
     {% if entry.poster %}
       <div class="poster hidden">
         <div style="text-align: center;">
