--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -400,7 +400,7 @@
               style="width:100%; height:900px;" 
               frameborder="0"
             >
-              <p>Unable to display PDF file. <a href="{{ pdf_url }}">Download</a> instead.</p>
+              <p><a href="{{ pdf_url }}">Download</a> instead.</p>
             </iframe>
           </object>
         </div>
